[0.10.3.0 - ]
Changed RuntimeFileChecks to strip quotes from environment variable paths

[0.10.2.0 - 2008-11-15]
Fixed bug where Fluid.ParticleWriteData would be empty
Added sample projects to solution
Samples target the RTM version of XNA 3.0 and SlimDX September 2008
Included some unit tests (many more can be written)
Changed onAdd, onRemove to ItemAdded, ItemRemoved
Changed ParticleData, FluidPacketData to take pointers instead of values in their constructors - this fixes up Fluid.ParticleWriteData being empty (among others)
Fixed random crash on exit when a controller had been created. Crash caused by shape being disposed by controller, then attempting to be released by Shape on GC

[0.10.0.0 - 2008-08-24]
Changed to PhysX SDK 2.8.1 - Check the official change log
Removed the 'Base' prefix from abstract class names, no need for it, conforms to .Net naming and PhysX naming better
Added Timing to Compartment
Added checks for null and disposed parameters to lots of functions
Removed FluidDescriptionBase.SetInitialParticleData and FluidDescriptionBase.SetParticleWriteData.
Added FluidDescriptionBase.ParticleDeletionIdWriteData, FluidDescriptionBase.ParticleCreationIdWriteData, FluidDescriptionBase.FluidPacketData
FluidDescriptionBase. { InitialParticleData, ParticleWriteData, ParticleDeletionIdWriteData, ParticleCreationIdWriteData, FluidPacketData } are all created when the constructor is called as per the SDK
Changed AllocateCommonParticleData to an instance call
Slight speed up to FluidEmitter.LoadFromDescription. Fixed FluidEmitter.SaveToDescription not saving the FrameShape
Removed OverlapAABBTrianglesResult. Cloth.OverlapAABBTriangles return null if no overlap, the indices otherwise
Fixed removing a shape description from the actor description
ControllerManagement is now ControllerManager
Controller has a Manager property
Fixed bug in the joint constructor. Actor2 was being assigned to actor1
SweepQueryHit is now a (reference) class